fix: projects navbar on mobile

--- a/src/components/Project/Project.css
+++ b/src/components/Project/Project.css
@@ -134,7 +134,7 @@
     padding: 0.5rem 0;
   }
   .project-navbar button {
-    font-size: 1.15rem;
+    font-size: 1.1rem;
     display: none;
   }
   .project-navbar button.active {
